@@ -6,6 +6,9 @@ mvn install:install-file "-DgroupId=org.apache" "-DartifactId=doris-flink" "-Dve
 
 ~/git/flink-1.11.2/bin/flink run -c org.apache.doris.demo.flink.kafka.FlinkKafka2Doris target/flink-doris-demo-1.0-SNAPSHOT.jar
 
+~/git/flink-1.11.2/bin/flink run -c org.apache.doris.demo.flink.kafka.FlinkKafkaOriginalDataT2Doris target/flink-doris-demo-1.0-SNAPSHOT.jar
+~/git/flink-1.11.2/bin/flink run -c org.apache.doris.demo.flink.kafka.FlinkKafkaUnpackDataT2Doris target/flink-doris-demo-1.0-SNAPSHOT.jar
+
 Reason: JSON data is not an array-object, `strip_outer_array` must be FALSE.. src line: [{"package_time":"2021-08-16 14:01:00","receive_time":"2021-08-16 14:01:00","equipment_number":"10","ip":"test","data":"test"}];
 
 http://192.168.0.152:8040/api/_load_error_log?file=__shard_2/error_log_insert_stmt_db42e6d8d081cf5c-8ce12b2ab9e00984_db42e6d8d081cf5c_8ce12b2ab9e00984
